# JARVIS

./: .env.example  .gitignore  API.md  CHANGELOG.md  IDENTITY.md  INVARIANTS.md  README.md  VERSIONING.md  config.yaml  jarvis.db  main.py  pyproject.toml  requirements.txt
api/: __init__.py  client.py  rate_limiter.py
audio/: __init__.py  audio_buffer.py  mic_capture.py
commands/: __init__.py  command_map.yaml  registry.py
config/: permissions.yaml
core/: __init__.py  circuit_breaker.py  degradation.py  errors.py  orchestrator.py  orchestrator_unified.py  state_machine.py
infra/: __init__.py  audit.py  database.py  health.py  logging.py  security_config.py  server.py  service_bus.py  tts_engine.py
logs/: .gitkeep
memory/: __init__.py  context.py  conversation.py  governance.py  preferences.py
multimodal/: __init__.py  camera.py  events.py  screenshot.py
planner/: __init__.py  llm_planner.py
security/: __init__.py  permissions.py
stt/: __init__.py  whisper_engine.py
tests/: conftest.py  test_audit.py  test_authority.py  test_circuit_breaker.py  test_confirmation.py  test_contracts.py  test_enforcement.py  test_memory_governance.py  test_orchestrator_regression.py  test_persistence.py  test_reliability.py
tools/: __init__.py  authority.py  executor.py  registry.py
